# alpha-words.hs

./: LICENSE  README.md  alpha-words.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
