name:                alpha-words
version:             0.1.0.0
synopsis:            Find words from a subset of a list of characters
description:         Please see README.md
homepage:            https://github.com/rashack/alpha-words#readme
license:             BSD3
license-file:        LICENSE
author:              Kjell Andreassen
maintainer:          andreassen.kjell+alpha-words@gmail.com
copyright:           2016 Kjell Andreassen
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable alpha-words-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alpha-words
  default-language:    Haskell2010

test-suite alpha-words-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alpha-words
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rashack/alpha-words
